<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/simple_adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/simple_adapter"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/custom_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/custom_dialog"
        app:layout_constraintTop_toBottomOf="@+id/simple_adapter" />

    <Button
        android:id="@+id/xml_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/xml_menu"
        app:layout_constraintTop_toBottomOf="@+id/custom_dialog" />

    <Button
        android:id="@+id/action_context"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/action_context"
        app:layout_constraintTop_toBottomOf="@+id/xml_menu"/>

</androidx.constraintlayout.widget.ConstraintLayout>
